--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="google-site-verification" content="b47U3mKLDhMAja8FdI9VD8c-pTUcMLsDt_Fb4JEup0E" />
+  <link rel="canonical" href="https://jujutsu-looks.pages.dev/">
   <meta name="robots" content="index, follow">
   <meta name="title" content="Cultural Impact of Jujutsu Kaisen Merchandise">
   <meta name="description" content="Explore how Jujutsu Kaisen shirts reshaped anime merchandise trends, streetwear fashion, and fandom design culture.">
@@ -157,3 +159,4 @@
   </div>
 </body>
 </html>
+
